--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ rust-version = "1.80"
 miette = { version = "7.2.0", features = ["fancy"] }
 bytes = "1.3.0"                                  # helps manage buffers
 clap = {version = "4.5.30", features = ["derive"]}
+thiserror = "2.0.11"
